--- a/src/scss/layout/_terms-conditions.scss
+++ b/src/scss/layout/_terms-conditions.scss
@@ -1,3 +1,4 @@
+/*Secciones de los términos*/
 .page-header {
     padding: 30px;
     text-align: center;
@@ -9,7 +10,7 @@
 
 .terms-sections {
     width: 80%;
-    max-width: 700px;
+    max-width: 600px;
     margin: 0 auto;
     margin-bottom: 80px;
 }
@@ -20,6 +21,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+/*Flecha de volver arriba*/
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -31,7 +33,6 @@
     top: -10px;
     
 }
-
 .arrow-container {
     width: 50px;
     height: 50px;
