--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -1,6 +1,7 @@
 .container-menu{
 	width: 100%;
-	height: 100px;
+	//height: 15vh;
+  height: auto;
 	padding-left: 2rem;
 	padding-right: 2rem;
 	position: fixed;
@@ -8,7 +9,9 @@
 		left: 0;
 	opacity: 1;
 	z-index:999;
-  	//border-bottom: .5px solid $primaryColorBgBlack;
+  background-color: #AFD0EA;
+  box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+ 
 }
 
 .container-menu-logo{
