--- a/src/scss/inicio-style.scss
+++ b/src/scss/inicio-style.scss
@@ -13,5 +13,6 @@
 @import 'layout/normalize';
 @import 'layout/terms-conditions';
 @import 'layout/forms';
-@import 'layout/lightbox';
+@import 'layout/inicio_layout';
+//@import 'layout/lightbox';
 @import 'layout/accordeon';
