--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -1,17 +1,15 @@
 .container-menu{
 	width: 100%;
-	//height: 15vh;
-  height: auto;
+  height: 100px;
 	padding-left: 2rem;
 	padding-right: 2rem;
-	position: fixed;
-		top: 0;
-		left: 0;
+	// position: fixed;
+	// 	top: 0;
+	// 	left: 0;
 	opacity: 1;
-	z-index:999;
-  background-color: #AFD0EA;
+	//z-index:999;
+  background-color: #A9D7EA;
   box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
- 
 }
 
 .container-menu-logo{
@@ -95,6 +93,7 @@
   transition: 1s ease-in-out;
   color: #000;
   z-index: 1;
+  background-color: #A9D7EA;
 }
 
 .nav-mobile.closed{
@@ -103,8 +102,8 @@
 
 .nav-mobile .btn-anim-three{
   position: fixed;
-  top: .5rem;
-  right: .5rem;
+  top: 25px;
+  right: 25px;
 }
 
 .nav-mobile .nav {
@@ -119,63 +118,54 @@
   padding: 1rem;
 }
 
-.nav-mobile .nav>li>a {
-  color:inherit;
+.nav-mobile nav>ul>li>a, .nav-desktop nav>ul>li>a{
+  color: $primaryColorWhite;
 }
 
 /* animated icons for nav-mobile */
 .btn-anim-three{
-    background-color: $secondaryColorBgBlue3;
+    // background-color: $secondaryColorBgBlue3;
+    background-color: $primaryColorWhite;
     display: inline-block;
     width: 45px;
     height: 40px;
     position: relative;
-    
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-        margin: 12px 12px;
-    }
-
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-        margin: 12px 12px;
-    }   
 }
 
-.btn-anim-three-scrolled-inactive{
-    margin: 17px 10px;
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-        margin: 2px 12px;
-    }
+// .btn-anim-three-scrolled-inactive{
+//     margin: 17px 10px;
+//     /*MEDIA QUERIES*/
+//     /*Tablet*/
+//     @media only screen and (min-width: 768px) and (max-width: 1023px){
+//         margin: 2px 12px;
+//     }
 
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-        margin: 25px 12px;
-    } 
-}
+//     /*Desktop*/
+//     @media only screen and (min-width: 1024px){
+//         margin: 25px 12px;
+//     } 
+// }
 
-.btn-anim-three-scrolled-active{
-    margin: 2px 10px;
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-        margin: 12px 12px;
-    }
+// .btn-anim-three-scrolled-active{
+//     margin: 2px 10px;
+//     /*MEDIA QUERIES*/
+//     /*Tablet*/
+//     @media only screen and (min-width: 768px) and (max-width: 1023px){
+//         margin: 12px 12px;
+//     }
 
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-        margin: 12px 12px;
-    } 
-}
+//     /*Desktop*/
+//     @media only screen and (min-width: 1024px){
+//         margin: 12px 12px;
+//     } 
+// }
 
 .btn-anim-three span{
     position: absolute;
     height: 3px;
     border-radius: 2px;
-    background: #fff;
+    // background: #fff;
+    background: $secondaryColorBgBlue3;
     transition: all .8s ease;
 }
 
