--- a/src/scss/layout/_profile.scss
+++ b/src/scss/layout/_profile.scss
@@ -1,7 +1,40 @@
+.body-bg-color-profile{
+    background-color: #BBDEF1;
+}
+
 .container-page-profile{
     width: 100%;
     height: auto;
     position: relative;
+        // top: 50px;
+    padding-top: 1rem 0 1rem 0;
+    background-color: #BBDEF1;
+    //antes: color-bg-blue-bg
+}
+
+.profile-photo-create{
+    float: none;
+    width: 260px;
+    margin: 1.5rem auto;
+    background-color: white;
+    border-radius: 20px;
+    padding-bottom: 6px;
+    border: 5px solid white;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+        float: left;
+            top: 50%;
+            bottom: 50%;
+    }
+}
+
+.profile-photo-create:active{
+    top: 1px;
 }
 
 .profile-btn {
@@ -20,67 +53,32 @@
 .profile-photo-select {
     //margin: 2.4rem auto auto auto;
 }
+
 .profile-photo--btn {
     
 }
 
-
-
 .profile-photo-select--img {
-    background-image: url(../img/kid_add.png);
+    // background-image: url(../img/kid_add.png);
+    background-color: $secondaryColorBgBlue3;
     background-repeat: no-repeat;
     background-size: contain;
     width: 100%;
-    height: 165px;
+    // height: 165px;
+    height: auto;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     transition: all 0.3s ease 0s;
 }
-
-.container-account-edit{
-    position: relative;
-    overflow: auto;
-}
-
-.account-name{
-    display: inline;
-    float: left;
-}
-.account-edit--img{
-   display: block;
-   float: right;
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-     display: none;
-   }
-
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-      display:none;
-    } 
-}
-.account-edit:after{
-   content: none;
-   float: right;
-   padding-right: 10px;
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-     content: "Editar cuenta familiar";
-   }
-
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-      content: "Editar cuenta familiar";
-    } 
-
+.profile-photo-select--img>img{
+    width: 80%;
+    margin: auto 10%;
 }
 
 .container-new-profile{
-    width: 95%;
+    width: 85%;
     height: auto;
-    margin: 1% 2.5% 1% 2.5%;
+    margin: 0 7.5%;
     padding: 1rem;
     overflow: auto;
 
@@ -96,68 +94,120 @@
     
     /*MEDIA QUERIES*/
     /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
+    @media only screen and (min-width: 768px) and (max-width: 999px){
      width: 80%;
-     margin: 5% 10% 2% 10%;
+     margin: 0 10% 3% 10%;
+   }
+
+    /*MEDIA QUERIES*/
+    /*Big tablet + Little Desktop*/
+    @media only screen and (min-width: 1000px) and (max-width: 1123px){
+     width: 70%;
+     margin: 0 15% 3% 15%;
    }
 
     /*Desktop*/
-    @media only screen and (min-width: 1024px){
-      width: 60%;
-      margin: 5% 20% 2% 20%;
+    @media only screen and (min-width: 1124px){
+      width: 50%;
+      margin: 0 25% 2% 25%;
     } 
 
 }
 
-.profile-photo-create{
-    float: left;
-        top: 50%;
-        bottom: 50%;
-
-    width: 210px;
-    background-color: white;
-    border-radius: 20px;
-    padding-bottom: 6px;
-    border: 5px solid white;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+.profile-title, .profile-info-create, .profile-btn-add{
+    float:none;
+    text-align: center;
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+        float: right;
+        width: 50%;
+        text-align: left;
+    }
 }
 
-.profile-photo-create:active{
-    top: 1px;
-}
-
-
-.profile-title{
-    float: right;
-    width: 70%;
-    padding-left: 3rem;
-    // text-align: center;
-        // top: 5%;
-        // right: 20%;
-}
-
-.profile-info-create{
-    float: right;
-    width: 70%;
-    padding-left: 3rem;
-    //text-align: center;
-        // top: 15%;
-        // right: 10%;
+.profile-title > h3{
+    line-height: 1rem;
 }
 
 .profile-info-create > input{
-    width: 70%;
+    width: 50%;
 }
 
-.profile-btn-add{
-    float: right;
-    width: 70%;
-    text-align: center;
-        // top: 35%;
-        // right: 10%;
+.profile-info-create > label{
+    display: block;
 }
+
+.container-account-edit{
+    position: relative;
+        //top: 50px;
+    overflow: auto;
+}
+
+.account-name{
+    display: inline;
+    float: left;
+    padding-left: 7.5%;
+    line-height: 0;
+
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media only screen and (min-width: 768px) and (max-width: 999px){
+     padding-left: 10%;
+   }
+
+    /*MEDIA QUERIES*/
+    /*Big tablet + Little Desktop*/
+    @media only screen and (min-width: 1000px) and (max-width: 1123px){
+     padding-left: 15%;
+   }
+
+    /*Desktop*/
+    @media only screen and (min-width: 1124px){
+      padding-left: 25%;
+    } 
+
+}
+.account-edit--img{
+   display: block;
+   float: right;
+   margin-right: 7.5%;
+   width: 40px;
+   margin-top: -20px;
+   height: auto;
+   line-height: 0;
+
+   /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media only screen and (min-width: 768px){
+      display: none;
+ } 
+}
+
+.account-edit::after{
+   content: none;
+   float: right;
+   //padding-right: 10px;
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media only screen and (min-width: 768px) and (max-width: 1023px){
+     content: "Editar cuenta familiar";
+     padding-right: 10%;
+   }
+    /*Big tablet + Little Desktop*/
+    @media only screen and (min-width: 1000px) and (max-width: 1123px){
+     content: "Editar cuenta familiar";
+     padding-right: 15%;
+   }
+    /*Desktop*/
+    @media only screen and (min-width: 1124px){
+      content: "Editar cuenta familiar";
+      padding-right: 25%;
+    } 
+
+}
+
+
 
 
 
