--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -16,7 +16,7 @@
 	float: left;
 	height: auto;
 	width: 200px;
-	margin: auto;
+	margin: 5px auto 0 auto;
 }
 
 .container-menu-options{
@@ -54,7 +54,11 @@
     } 
 }
 
-
+.menu-desktop li a:hover, .menu-mobile li a:hover{
+  padding-bottom: .5rem;
+  border-bottom: 2px solid $secondaryColorBgBlue3;
+  cursor: pointer;
+}
 
 .menu-logo-burguer-scrolled-inactive{
     padding-top: 1rem; 
@@ -104,6 +108,7 @@
   position: fixed;
   top: 25px;
   right: 25px;
+  cursor: pointer;
 }
 
 .nav-mobile .nav {
@@ -131,34 +136,6 @@
     height: 40px;
     position: relative;
 }
-
-// .btn-anim-three-scrolled-inactive{
-//     margin: 17px 10px;
-//     /*MEDIA QUERIES*/
-//     /*Tablet*/
-//     @media only screen and (min-width: 768px) and (max-width: 1023px){
-//         margin: 2px 12px;
-//     }
-
-//     /*Desktop*/
-//     @media only screen and (min-width: 1024px){
-//         margin: 25px 12px;
-//     } 
-// }
-
-// .btn-anim-three-scrolled-active{
-//     margin: 2px 10px;
-//     /*MEDIA QUERIES*/
-//     /*Tablet*/
-//     @media only screen and (min-width: 768px) and (max-width: 1023px){
-//         margin: 12px 12px;
-//     }
-
-//     /*Desktop*/
-//     @media only screen and (min-width: 1024px){
-//         margin: 12px 12px;
-//     } 
-// }
 
 .btn-anim-three span{
     position: absolute;
