--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -20,7 +20,7 @@
 }
 .footer_profile{
     position: relative;
-        bottom: 0;
+        bottom: -100px;
     width: 100%;
     height: auto;
     justify-content: center;
