--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -9,7 +9,11 @@
 	opacity: 1;
 	//z-index:999;
   background-color: #A9D7EA;
-  box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+  box-shadow: 0px 2px 2px 0px $colorShadowBtn ;
+  position:fixed;
+    top:0;
+    left: 0;
+  z-index: 999;
 }
 
 .container-menu-logo{
@@ -58,25 +62,6 @@
   padding-bottom: .5rem;
   border-bottom: 2px solid $secondaryColorBgBlue3;
   cursor: pointer;
-}
-
-.menu-logo-burguer-scrolled-inactive{
-    padding-top: 1rem; 
-}
-
-.menu-logo-burguer-scrolled-active{
-    padding-top: 0;
-}
-
-.scrolled-inactive{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  transition: all ease-in 300ms;
-}
-.scrolled-active{
-  padding-top: 0;
-  padding-bottom: 0;
-  transition: all ease-in 300ms;
 }
 
 .nav-desktop li{
