--- a/src/scss/layout/_profile.scss
+++ b/src/scss/layout/_profile.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: auto;
     position: relative;
-        // top: 50px;
+        top: 100px;
     padding-top: 1rem 0 1rem 0;
     background-color: #BBDEF1;
     //antes: color-bg-blue-bg
@@ -62,9 +62,22 @@
     border-top-right-radius: 1rem;
     transition: all 0.3s ease 0s;
 }
-.profile-photo-select--img>img{
+.profile-photo-select--img>img,.profile-photo-select--img-new>img{
     width: 80%;
     margin: auto 10%;
+}
+
+.profile-photo-select--img-new {
+    background-color: $secondaryColorBgBlue3;
+    opacity: .2;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    // height: 165px;
+    height: auto;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    transition: all 0.3s ease 0s;
 }
 
 .container-new-profile{
@@ -106,7 +119,7 @@
 
 }
 
-.profile-title, .profile-info-create, .profile-btn-add{
+.profile-title-create, .profile-info-create, .profile-btn-add, .profile-info{
     float:none;
     text-align: center;
     /*MEDIA QUERIES*/
@@ -125,9 +138,17 @@
 .profile-info-create > input{
     width: 50%;
 }
-
 .profile-info-create > label{
     display: block;
+}
+
+.profile-info > input{
+    width: 50%;
+    margin-left: 10px;
+}
+.profile-info > label{
+   display: inline;
+   width: 20%;
 }
 
 .container-account-edit{
@@ -213,6 +234,80 @@
 }
 
 
+.container-profile{
+    width: 85%;
+    height: auto;
+    margin: 0 7.5%;
+    padding: 1rem;
+    overflow: auto;
 
+    position: relative;
+        top:0;
+        left:0;
+    // top: 50%;
+    // transform: translateY(-50%);
 
+    border-radius: 20px;
+    border: 5px solid $primaryColorWhite;
+    box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+    
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media only screen and (min-width: 768px) and (max-width: 1023px){
+     width: 80%;
+     margin: 0 10% 3% 10%;
+   }
 
+    /*Desktop*/
+    @media only screen and (min-width: 1024px){
+      width: 70%;
+      margin: 0 15% 2% 15%;
+    } 
+
+}
+
+.profile-title{
+    float:none;
+    text-align: center;
+    display: block;
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+        width: 80%;
+        margin: 0 10%;
+    }
+}
+
+.profile-title > h3{
+    line-height: 1rem;
+}
+
+.profile-photo{
+    float: none;
+    display: inline-block;
+    width: 220px;
+    margin: 1rem;
+    background-color: white;
+    border-radius: 20px;
+    padding-bottom: 6px;
+    border: 5px solid white;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px 0px $colorShadowBtn;
+}
+
+.profile-photo > a > h4{
+    line-height: 0rem;
+    color: $primaryColorBgBlack;
+}
+
+.profile-photo-create > a > h4{
+    color: $primaryColorBgBlack;
+}
+
+.profile-photos{
+    width: 80%;
+    height: auto;   
+    margin: auto;
+    float: none;
+}
