upload finished profile_global.html & profile.html

--- a/src/scss/layout/_profile.scss
+++ b/src/scss/layout/_profile.scss
@@ -119,6 +119,45 @@
 
 }
 
+.container-profile{
+    width: 85%;
+    height: auto;
+    margin: 0 7.5%;
+    padding: 1rem;
+    overflow: auto;
+
+    position: relative;
+        top:0;
+        left:0;
+    // top: 50%;
+    // transform: translateY(-50%);
+
+    border-radius: 20px;
+    border: 5px solid $primaryColorWhite;
+    box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+    
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media only screen and (min-width: 768px) and (max-width: 999px){
+     width: 80%;
+     margin: 0 10% 3% 10%;
+   }
+
+    /*MEDIA QUERIES*/
+    /*Big tablet + Little Desktop*/
+    @media only screen and (min-width: 1000px) and (max-width: 1123px){
+     width: 70%;
+     margin: 0 15% 3% 15%;
+   }
+
+    /*Desktop*/
+    @media only screen and (min-width: 1124px){
+      width: 50%;
+      margin: 0 25% .5% 25%;
+    } 
+
+}
+
 .profile-title-create, .profile-info-create, .profile-btn-add, .profile-info{
     float:none;
     text-align: center;
@@ -233,38 +272,37 @@
 
 }
 
+// .container-profile{
+//     width: 85%;
+//     height: auto;
+//     margin: 0 7.5%;
+//     padding: 1rem;
+//     overflow: auto;
 
-.container-profile{
-    width: 85%;
-    height: auto;
-    margin: 0 7.5%;
-    padding: 1rem;
-    overflow: auto;
+//     position: relative;
+//         top:0;
+//         left:0;
+//     // top: 50%;
+//     // transform: translateY(-50%);
 
-    position: relative;
-        top:0;
-        left:0;
-    // top: 50%;
-    // transform: translateY(-50%);
-
-    border-radius: 20px;
-    border: 5px solid $primaryColorWhite;
-    box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
+//     border-radius: 20px;
+//     border: 5px solid $primaryColorWhite;
+//     box-shadow: 0px 2px 2px 0px rgba(194,192,194,1);
     
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media only screen and (min-width: 768px) and (max-width: 1023px){
-     width: 80%;
-     margin: 0 10% 3% 10%;
-   }
+//     /*MEDIA QUERIES*/
+//     /*Tablet*/
+//     @media only screen and (min-width: 768px) and (max-width: 1023px){
+//      width: 80%;
+//      margin: 0 10% 3% 10%;
+//    }
 
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-      width: 70%;
-      margin: 0 15% 2% 15%;
-    } 
+//     /*Desktop*/
+//     @media only screen and (min-width: 1024px){
+//       width: 70%;
+//       margin: 0 15% 2% 15%;
+//     } 
 
-}
+// }
 
 .profile-title{
     float:none;
@@ -284,7 +322,7 @@
 
 .profile-photo{
     float: none;
-    display: inline-block;
+    // display: inline-block;
     width: 220px;
     margin: 1rem auto;
     background-color: white;
@@ -294,6 +332,31 @@
     transition: all 0.3s ease 0s;
     cursor: pointer;
     box-shadow: 0px 2px 2px 0px $colorShadowBtn;
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+        float: left;
+            top: 50%;
+            bottom: 50%;
+         margin: 1rem auto 1rem 3rem;
+    }
+}
+
+.profile-photo.float-left{
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){ 
+        float:left;
+        margin-left: 1.2rem;
+    }
+}
+.profile-photo.float-right{
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){ 
+       float:right;
+       margin-right: 1.2rem;
+    }
 }
 
 .profile-photo > a > h4{
@@ -305,24 +368,6 @@
     color: $primaryColorBgBlack;
 }
 
-.profile-photos{
-    width: 80%;
-    height: auto;   
-    margin: auto;
-    float: none;
-}
-
-.profile-info>div>span{
-    float:none;
-     min-width: 70%;
-    /*MEDIA QUERIES*/
-    /*Tablet & Desktop*/
-    @media only screen and (min-width: 768px){
-        float:right;
-        padding-left: 1px;
-    }
-}
-
 .profile-info>div{
     margin: 1rem;
 }
@@ -330,30 +375,48 @@
 .lbl-profile-title{
     font-size: 1rem;
 }
-.lbl-profile-txt>p{
-    font-size: 1rem;
+.lbl-profile-txt > p{
     line-height: 2rem;
-    //margin-bottom: 1.5rem;
-    padding-left: .5rem;
-    /*MEDIA QUERIES*/
-    /*Tablet & Desktop*/
-    @media only screen and (min-width: 768px){
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-   
+    font-size: 1rem;
+    margin-top: 0;
 }
 
 .lbl-profile-txt{
     font-size: 1rem;
-    
+    display: inline-block;
+    width: 80%;
+    margin: auto 10%;
     padding-left: 1px;
     border-radius: 5px;
     border: 1px solid $primaryColorBgBlue;
     color: $primaryColorBgBlue;
     background-color: $primaryColorWhite;
-    resize:none;
+    resize: none;
+    line-height: 2rem;
+    //margin-bottom: 1.5rem;
+    
+    
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+       //margin-left: 1rem;
+       padding-left: .5rem;
+       width:100%;
+       margin:auto;
+       
+    }
 }
+.lbl-profile-txt.inline{
+    overflow: none;
+    /*MEDIA QUERIES*/
+    /*Tablet & Desktop*/
+    @media only screen and (min-width: 768px){
+        width: 60%;
+        float:right;
+        
+    }
+}
+
 
 .profile-btn-delete > .btn-act{
     font-size: 1rem;
@@ -369,4 +432,10 @@
     @media only screen and (min-width: 768px){
         float: right;
     }
+}
+
+.profile-btn-add > .btn-act{
+    font-size: 1rem;
+    padding: 1rem 2rem;
+
 }
