--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -25,7 +25,7 @@
     height: auto;
     justify-content: center;
     padding: 3rem 2rem 1rem 2rem;
-    background-image: url("../img/footer.svg");
+    background-image: url("../img/footer.png");
     background-size: contain;
     background-repeat: repeat;
     background-color: #BBDEF1;
