--- a/src/scss/layout/_inicio_layout.scss
+++ b/src/scss/layout/_inicio_layout.scss
@@ -1,6 +1,6 @@
 .lightbox_double {
     ///padding: 20px;
-    ///border: 10px red solid;///$secondaryColorBgBlack1 
+    ///border-bottom: 10px red solid;///$secondaryColorBgBlack1 
     border-radius: 5px;
     box-shadow: $shadow;
 
@@ -10,16 +10,16 @@
     width: 100%;
     text-align: center;
     @media screen and (min-width: 1024px){
-margin: 0 auto;
-border: 10px $secondaryColorBgBlack1 solid;
-width: 80%;
-}
+        margin: 0 auto;
+        border: 10px $secondaryColorBgBlack1 solid;
+        width: 80%;
+    }
 
 }
 
 .close-position {
-margin-right: 10px;
-float: right;
+    margin-right: 10px;
+    float: right;
     background-image: url(../img/btn-cancel.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -28,35 +28,37 @@ float: right;
 }
 
 .lightbox_start {
-width:100%;
-height:100%;
+    width:100%;
+    height:100%;
+    display:block;
+    border-bottom: 10px $secondaryColorBgBlack1 solid;
 
-display:block;
+    @media screen and (min-width: 1024px){
+        display:inline-block;
+        width: 45%;
+        border-bottom: none;
+        border-right: 5px $secondaryColorBgBlack1 solid;;
 
-@media screen and (min-width: 1024px){
-display:inline-block;
-width: 45%;
-
-        }
+    }
 }
 
 .lightbox_create {
-width:100%;
-height:100%;
+    width:100%;
+    height:100%;
 
-display:block;
-@media screen and (min-width: 1024px){
-display:inline-block;
-width: 45%;
-        }
+    display:block;
+    @media screen and (min-width: 1024px){
+        display:inline-block;
+        width: 45%;
+    }
 
 }
 
 .lightbox-head {
     padding: 10px;
     margin-top: 0;
-float: right;
-width: 100%;
+    float: right;
+    width: 100%;
 }
 
 .h1-lightbox {
@@ -64,5 +66,21 @@ width: 100%;
     font-size: 1.85rem;
     line-height: 2rem;
     width: 100%;
+}
+
+.lightbox {
+    padding: 20px;
+    border: 10px $secondaryColorBgBlack1 solid;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    box-shadow: $shadow;
+    text-align: center;
+    background-color: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 20%;
+    margin: auto;
 }
 
