--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -27,7 +27,7 @@
     padding: 3rem 2rem 1rem 2rem;
     background-image: url("../img/footer.png");
     background-size: contain;
-    background-repeat: repeat;
+    background-repeat: repeat-x;
     background-color: #BBDEF1;
     // antes: color-bg-blue-bg
     
