--- a/src/scss/colors/_color-background.scss
+++ b/src/scss/colors/_color-background.scss
@@ -41,6 +41,9 @@
 .color-bg-blue-bg{
     background-color: $secondaryColorBgBlue4;
 }
+.color-bg-blue-head{
+background-color: $secondaryColorBgBlue5;
+}
 .color-bg-pink{
     background-color: $primaryColorBgPink;
 }
