--- a/src/scss/variables/_color-variables.scss
+++ b/src/scss/variables/_color-variables.scss
@@ -28,6 +28,7 @@ $secondaryColorBgBlue1: #89ecf5;
 $secondaryColorBgBlue2: #0a6d76;
 $secondaryColorBgBlue3: #0097e8;
 $secondaryColorBgBlue4: #85c2ff;
+$secondaryColorBgBlue5: #a6c8e5;
 $secondaryColorBgPink1: #ff67a7;
 $secondaryColorBgPink2: #d93560;
 $secondaryColorBgYellow1: #ffdb4d;
