--- a/src/scss/layout/_generic.scss
+++ b/src/scss/layout/_generic.scss
@@ -30,7 +30,15 @@
 }
 
 .container{
-    width: 100%; 
+    width: 100%;
+    border:1px solid red;
+}
+.container70{
+    margin:auto;
+    width: 75%; 
+    @media screen and (min-width: 320px) and (max-width: 760px) {
+    width: 95%; 
+    }
 }
 .container-flex{
     display: flex;
@@ -52,7 +60,8 @@
     padding:0rem 0 2rem 0rem;
     justify-content: flex-end;
     text-align: center;
-    max-width: 350px;
+    max-width: 600px;
+    border:1px solid orange;
 
     }
 
@@ -64,8 +73,9 @@
     justify-content: flex-end;
     text-align: center;
     margin: 0rem 0em 0rem 0rem;
-    min-height:650px;
+    min-height:600px;
     max-width: 600px;
+    border:1px solid yellow;
     }
 
     &-flex-4{
@@ -127,21 +137,23 @@
     @media only screen and (min-width: 768px){
     }
 }
- 
-
     &-rnd-bottom{
     margin:auto;
     padding:1rem 0.75rem 1rem 0.75rem;
     width:100%;
     max-width: 600px;
+    opacity:0.8;
     background-color:$primaryColorWhite;
     border-top-left-radius:0rem;
     border-top-right-radius:0rem;
     border-bottom-left-radius:1rem;
     border-bottom-right-radius:1rem;
+    border:2px solid $secondaryColorBgGreen3;
     text-align:center;
     box-shadow: 0px 1px 5px $secondaryColorBgBlack2;
+    
     @media only screen and (min-width: 768px){
+    padding:1rem 3rem 1rem 3rem;
     }
 }
     
@@ -199,16 +211,26 @@
     justify-content: center;
     padding: 10px;
 }
+
+.f-basis-5 {
+          flex-basis: 500px; }
+
+.f-basis-4 {
+          flex-basis: 400px; }
+
+.f-basis-3 {
+          flex-basis: 300px; }
+
+.f-basis-2 {
+          flex-basis: 200px; }
 .label{
-    flex:1;
     width:95%;
     border-radius: 1rem;
-    height: auto;
+    height: 185px;
     background-color: #ffffff;
-    margin-bottom: 0px;
-    padding:2rem;
+    margin-top: -10px;
+    padding:1rem;
     margin-left: 3%;
-    justify-content: flex-end;
     box-shadow: $colorShadowBtn 0px 3px 3px;
 }
 .max-min{
@@ -219,14 +241,25 @@ hr{
     border:1px dotted $secondaryColorBgGreen2;
     margin: 1rem;
 }
-.testimonial{
-    padding:2rem 1rem 2rem 1rem;
-    color:black;
-}
+
 .container-icons{
     display:flex;
     align-items: center;
     justify-content: center;
     margin:auto;
     visibility: hidden;
+}
+.first{
+    order: 1;
+}
+.head-txt{
+    border:1px solid black;
+    width:280px;
+    margin:auto;
+    @media only screen and (min-width: 768px){
+    width:360px;
+}
+}
+.padding{
+    padding:2rem;
 }
