added familiar account, added profile, profile deleted

--- a/src/scss/layout/_lightbox.scss
+++ b/src/scss/layout/_lightbox.scss
@@ -42,3 +42,19 @@
     float: left;   
     margin-bottom: 25px;
 }
+
+.familiar-settings {
+    top: 10%;
+    line-height: 10px;
+    
+}
+
+.delete-link {
+    font-size: 14px;
+    line-height: 20px;
+    
+}
+
+.delete-link:before {
+    content: url('../img/danger-icon-33-33.svg');
+}
