--- a/src/scss/terms-style.css
+++ b/src/scss/terms-style.css
@@ -3102,6 +3102,20 @@ input[type='checkbox']:checked + label > span:before {
   float: left;
   margin-bottom: 25px; }
 
+/* line 46, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+.familiar-settings {
+  top: 10%;
+  line-height: 10px; }
+
+/* line 52, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+.delete-link {
+  font-size: 14px;
+  line-height: 20px; }
+
+/* line 58, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_lightbox.scss */
+.delete-link:before {
+  content: url("../img/danger-icon-33-33.svg"); }
+
 /*Opciones*/
 /* line 2, C:/Users/juanluis/Desktop/BAU/BAU-KIDSCODE/EQUIPO MACHO LOGIN/src/scss/layout/_accordeon.scss */
 .accordion {
