--- a/src/scss/layout/_lightbox.scss
+++ b/src/scss/layout/_lightbox.scss
@@ -14,6 +14,27 @@
 	margin: auto;
 }
 
+.lightbox-advice {
+    
+    padding: 20px;
+    border: 10px $secondaryColorBgBlack1 solid;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    box-shadow: $shadow;
+    text-align: center;
+    background-color: white;
+    position: absolute;
+	left: 0;
+	right: 0;
+    top: 20%;
+	margin: auto;
+}
+
+.lightbox-hidden {
+    display: none;
+}
+
 .lightbox-header {
     float: left;
     margin-top: -60px;
