added and fixed estructure and classes

--- a/src/scss/inicio-style.scss
+++ b/src/scss/inicio-style.scss
@@ -13,6 +13,5 @@
 @import 'layout/normalize';
 @import 'layout/terms-conditions';
 @import 'layout/forms';
-@import 'layout/inicio_layout';
-//@import 'layout/lightbox';
+@import 'layout/lightbox';
 @import 'layout/accordeon';
