--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -1,43 +1,65 @@
 fieldset {
-    border: 0;
+  border: 0;
 }
 
 .lighbox-fieldset {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px 0px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px 0px;
 }
 
+.lighbox-fieldset-double {
+  width: 80%;
+  margin: 0 auto;
+    padding: 0px;
+}
+
+.lighbox-fieldset-checkbox {
+  margin: 0 auto;
+  width: 80%;
+}
+
+
 label {
-    font-family: 'Montserrat', sans-serif; 
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 1.25rem;
-    
-    @media only screen and (min-width: 768px){
+  font-family: 'Montserrat', sans-serif; 
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.25rem;
+
+  @media only screen and (min-width: 768px){
     font-size: 1.25rem;
     line-height: 1.5rem;
     margin-top: 1rem; 
-    }
+  }
 }
+
+.label-text {
+
+  @media only screen and (min-width: 768px){
+  font-size: 1rem;
+  }
+    }
+
+//.lighbox-fieldset-double>label {
+
 
 /*Estilando estados del input*/
 input {
-    border-radius: 5px;
-    border: 1px solid $secondaryColorTxtGrey1;
-    padding: 5px;
-    width: 90%;
-    min-width: 200px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid $secondaryColorTxtGrey1;
+  padding: 5px;
+  width: 90%;
+  min-width: 200px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 input:focus {
-    border-color: $primaryColorBgBlue;
-    border-radius: 5px;    
+  border-color: $primaryColorBgBlue;
+  border-radius: 5px;    
 }
 input:hover {
-    border-color: $primaryColorBgBlue;
-    color: $primaryColorBgBlue;
+  border-color: $primaryColorBgBlue;
+  color: $primaryColorBgBlue;
 }
 /*Estilando estados del placeholder*/
 input:hover::-webkit-input-placeholder {
@@ -51,14 +73,37 @@ input:hover:-ms-input-placeholder {
 }
 
 
-/*Checkbox estilado*/
+/*NEW CHECKBOX*/
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+input[type=checkbox] { display:none; } /* to hide the checkbox itself */
+input[type=checkbox] + label:before {
+  font-family: FontAwesome;
+  display: inline-block;
 
-input[type='checkbox']{ height: 0; width: 0;}
+
+}
+
+input[type=checkbox] + label:before { content: "\f096"; } /* unchecked icon */
+input[type=checkbox] + label:before { letter-spacing: 10px;  } /* space between checkbox and label */
+
+input[type=checkbox]:checked + label:before { content: "\f046";  } /* checked icon */
+input[type=checkbox]:checked + label:before { color:$primaryColorBgGreen; } /* allow space for check mark */
+
+
+
+
+/*Checkbox estilado
+
+input[type='checkbox']{ 
+  height: 0; 
+  width: 0;
+  display:none;
+}
 
 input[type='checkbox'] + label{
   position: relative;
   display: flex;
-  margin: .6em 0;
+  margin: 1em;
   align-items: center;
   color: #9e9e9e;
   transition: color 250ms cubic-bezier(.4,.0,.23,1);
@@ -98,8 +143,8 @@ input[type='checkbox'] + label:hover, input[type='checkbox']:focus + label{
   color: $primaryColorBgBlue;
 }
 input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span{
-    background: rgba(255,255,255,.1);
-    border: 2px solid $primaryColorBgBlue;
+  background: rgba(255,255,255,.1);
+  border: 2px solid $primaryColorBgBlue;
 }
 input[type='checkbox']:checked + label > ins{ height: 100%; }
 
@@ -148,4 +193,4 @@ input[type='checkbox']:checked + label > span:before{
     border-color: #212121;
     transform: translate3d(0,-.5em,0) rotate(45deg);
   }
-}
+}*/
