--- a/src/scss/layout/_lightbox.scss
+++ b/src/scss/layout/_lightbox.scss
@@ -1,3 +1,91 @@
+///LOGIN - LOGOUT double
+
+.lightbox_double {
+    border-radius: 5px;
+    box-shadow: $shadow;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    
+    @media screen and (min-width: 768px){
+        border: 10px $secondaryColorBgBlack1 solid;
+        width: 80%;
+
+    }
+
+}
+
+.main-container {
+
+    @media screen and (min-width: 768px){
+        width: 80%;
+        margin: auto;
+        margin-top: 30px;
+    }
+}
+
+
+.close-position-double {  ///MISMAS CARACTERÍSTICAS QUE EL SIMPLE
+    display:none;
+
+    @media screen and (min-width: 768px){
+        display:block; 
+        float: right;
+        margin-right: -40px;
+        margin-top: -40px;
+        margin-bottom: -30px;
+        width: 5rem;
+        height: 5rem;
+        background-image: url(../img/btn-cancel.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+
+    }
+}
+
+.lightbox_start {
+    width:100%;
+    height:100%;
+    // display:block;
+    float:left;
+    border-bottom: 10px $secondaryColorBgBlack1 solid;
+
+    @media screen and (min-width: 768px){
+        // display:inline-block;
+        width: 50%;
+        padding-top: 10px;
+        padding-bottom: 30px;
+        border-bottom: none;
+        border-right: 5px $secondaryColorBgBlack1 solid;
+        ///border:1px solid blue;
+
+    }
+}
+
+.lightbox_create {
+    width:100%;
+    height:100%;
+    float:right;
+    // display:block;
+    @media screen and (min-width: 768px){
+        // display:inline-block;
+        width: 50%;
+        ///border:1px solid red;
+    }
+
+}
+
+.lightbox-head {
+    padding: 10px;
+    margin-top: 0;
+    float: right;
+    width: 100%;
+}
+
+
+
+///LO USAN TODOS
+
 .lightbox {
     padding: 20px;
     border: 10px $secondaryColorBgBlack1 solid;
@@ -8,11 +96,12 @@
     text-align: center;
     background-color: white;
     position: absolute;
-	left: 0;
-	right: 0;
+    left: 0;
+    right: 0;
     top: 20%;
-	margin: auto;
+    margin: auto;
 }
+
 
 .lightbox-header {
     float: left;
@@ -27,15 +116,18 @@
 }
 
 .close-position {
-    position: relative;
-    left: 97%;
-    top: -58px;
-    float: left;
-    background-image: url(../img/btn-cancel.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 55% 55%;
-    
+    display:none;
+    @media screen and (min-width: 1024px){
+        position: relative;
+        left: 97%;
+        top: -58px;
+        float: left;
+        background-image: url(../img/btn-cancel.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 55% 55%;
+
+    }
 }
 
 .advice-text {
