--- a/src/scss/layout/_lightbox.scss
+++ b/src/scss/layout/_lightbox.scss
@@ -161,7 +161,7 @@
     display: none;
 }
 
-.lightbox-advice-account,.lightbox-advice-delete, .lightbox-advice-added-account {
+.lightbox-advice-account,.lightbox-advice-delete, .lightbox-advice-added-account, .lightbox-advice-password {
     padding: 20px;
     border: 10px $secondaryColorBgBlack1 solid;
     border-radius: 5px;
@@ -194,4 +194,18 @@
 
 .delete-link:before {
     content: url('../img/danger-icon-33-33.svg');
+}
+
+.lightbox-password, .lightbox-advice-password{
+    z-index: 13;
+    position: absolute;
+    top: 30px;
+    left:0;
+}
+
+.password_reset{
+    text-decoration: none;
+    color: #0097e8;
+    cursor: pointer;
+    font-size: 1rem;
 }
